--- a/gladiator/src/main/resources/application.properties
+++ b/gladiator/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.show-sql=true
  
 ## Hibernate ddl auto.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 #spring.profiles.active=test
 
